[package]
name = "zx297520v3-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
nusb = "0.2.1"
simpleport = { git = "https://github.com/rva3/simpleport", version = "0.1.0", features = ["std"] }
thiserror = "2.0.18"

[profile.release]
lto = true
strip = true
